Added content and scroll animations

--- a/src/pages/diensten.html
+++ b/src/pages/diensten.html
@@ -8,141 +8,177 @@
 </head>
 <body>
     <main class="main">
-            <header class="header row">
-                <div class="container container--flex">
-                    <div class="header__brand">
-                        <span>RDT Service</span>
-                    </div>
-                    <nav class="header__menu">
-                        <ul class="nav">
-                            <li class="nav__item">
-                                <a href="#">Diensten</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="index.html">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
+        <header class="header row">
+            <div class="container container--flex">
+                <div class="header__brand">
+                    <a href="index.html"><span>RDT Service</span></a>
                 </div>
-            </header>
-    
-            <section class="section">
-                <div class="container">
-                    <div class="flex">
-                        <div class="flex__item flex__item-8">
-                            <div class="section__text">
-                                <span class="caption">Voor al je problemen</span>
-                                <h1 class="title">
-                                    <span class="title--colored">Totale afwerking</span> van A tot Z
-                                </h1>
-                                <p class="text">
-                                    RDT Service biedt een professionele uitwerking voor het plaatsen of herstellen van raamdecoratie. Het installeren van zonwering of het aanbrengen van domotica in je woning. Heb je hulp nodig bij het motoriseren? Aarzel dan niet om ons in te schakelen.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="flex__item flex__item-4">
-                            <figure class="visual section__pull-right">
-                                <img src="../assets/images/diensten-header.jpg" alt="" />
-                            </figure>
+                <nav class="header__menu">
+                    <ul class="nav">
+                        <li class="nav__item">
+                            <a href="diensten.html">Diensten</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="index.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <section class="section">
+            <div class="container">
+                <div class="flex">
+                    <div class="flex__item flex__item-8">
+                        <div class="section__text">
+                            <span class="caption">Voor al je problemen</span>
+                            <h1 class="title">
+                                <span class="title--colored">Totale afwerking</span> van A tot Z
+                            </h1>
+                            <p class="text">
+                                RDT Service biedt een professionele uitwerking voor het plaatsen of herstellen van raamdecoratie. Het installeren van zonwering of het aanbrengen van domotica in je woning. Heb je hulp nodig bij het motoriseren? Aarzel dan niet om ons in te schakelen.
+                            </p>
                         </div>
                     </div>
+                    <div class="flex__item flex__item-4"  data-aos="fade-left">
+                        <figure class="visual section__pull-right">
+                            <img src="../assets/images/diensten-header.jpg" alt="" />
+                        </figure>
+                    </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
 
-            <section class="section">
-                <div class="container">
-                    <div class="flex flex--rev">
-                        <div class="flex__item flex__item-8">
-                            <div class="section__text">
-                                <span class="caption">Diensten</span>
-                                <h1 class="title">
-                                    Raamdecoratie
-                                </h1>
-                                <p class="text">
-                                    Wij zijn gespecialiseerd in het plaatsen van unieke en functionele raamdecoratie. We zorgen voor een totale afwerking van je gekozen gordijnen, rolluiken of screens. Ook zorgen wij voor herstellingen van je bestaande raamdecoratie.
-                                </p>
-                                <a href="#" class="btn btn--secondary">Contacteer ons</a>
-                            </div>
-                        </div>
-                        <div class="flex__item flex__item-4">
-                            <figure class="visual">
-                                <img src="../assets/images/diensten-1.png" alt="" />
-                            </figure>
+        <section class="section" id="raamdecoratie">
+            <div class="container">
+                <div class="flex flex--rev">
+                    <div class="flex__item flex__item-8" data-aos="fade-right">
+                        <div class="section__text">
+                            <span class="caption">Diensten</span>
+                            <h1 class="title">
+                                Raamdecoratie
+                            </h1>
+                            <p class="text">
+                                Wij zijn gespecialiseerd in het plaatsen van unieke en functionele raamdecoratie. We zorgen voor een totale afwerking van je gekozen gordijnen, rolluiken of screens. Ook zorgen wij voor herstellingen van je bestaande raamdecoratie.
+                            </p>
+                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
                         </div>
                     </div>
-                </div>
-            </section>e
-            <section class="section">
-                <div class="container">
-                    <div class="flex">
-                        <div class="flex__item flex__item-6">
-                            <div class="section__text">
-                                <span class="caption">Diensten</span>
-                                <h1 class="title">
-                                    Binnen- & buiten zonwering
-                                </h1>
-                                <p class="text">
-                                    RDT Service helpt je graag verder met het plaatsen van zonweringen voor zowel binnen als buiten gebruik. Wij zorgen voor de installatie van je terrasschermen, rolluiken of screens. Zowel manueel of geautomatiseerd.
-                                </p>
-                                <a href="#" class="btn btn--secondary">Contacteer ons</a>
-                            </div>
-                        </div>
-                        <div class="flex__item flex__item-6">
-                            <figure class="visual">
-                                <img src="../assets/images/diensten-2.png" alt="" />
-                            </figure>
-                        </div>
+                    <div class="flex__item flex__item-4" data-aos="fade-right">
+                        <figure class="visual">
+                            <img src="../assets/images/diensten-1.png" alt="" />
+                        </figure>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>e
+        <section class="section" id="zonwering">
+            <div class="section--bar section--absolute"></div>
+            <div class="container">
+                <div class="flex">
+                    <div class="flex__item flex__item-6" data-aos="fade-left">
+                        <div class="section__text">
+                            <span class="caption">Diensten</span>
+                            <h1 class="title">
+                                Binnen- & buiten zonwering
+                            </h1>
+                            <p class="text">
+                                RDT Service helpt je graag verder met het plaatsen van zonweringen voor zowel binnen als buiten gebruik. Wij zorgen voor de installatie van je terrasschermen, rolluiken of screens. Zowel manueel of geautomatiseerd.
+                            </p>
+                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                        </div>
+                    </div>
+                    <div class="flex__item flex__item-6" data-aos="fade-left">
+                        <figure class="visual">
+                            <img src="../assets/images/diensten-2.png" alt="" />
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-            <section class="section">
-                <div class="container">
-                    <div class="flex flex--rev">
-                        <div class="flex__item flex__item-8">
-                            <div class="section__text">
-                                <span class="caption">Diensten</span>
-                                <h1 class="title">
-                                    Domotica
-                                </h1>
-                                <p class="text">
-                                    Wij regelen een vlekkeloze afwerking van je domoticasystemen. Met kant en klare domoticatoepassingen blijft je huisautomatisering betaalbaar en compatibel.   
+        <section class="section" id="domotica">
+            <div class="container">
+                <div class="flex flex--rev">
+                    <div class="flex__item flex__item-8" data-aos="fade-right">
+                        <div class="section__text">
+                            <span class="caption">Diensten</span>
+                            <h1 class="title">
+                                Domotica
+                            </h1>
+                            <p class="text">
+                                Wij regelen een vlekkeloze afwerking van je domoticasystemen. Met kant en klare domoticatoepassingen blijft je huisautomatisering betaalbaar en compatibel.   
+                            </p>
+                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                        </div>
+                    </div>
+                    <div class="flex__item flex__item-4" data-aos="fade-right">
+                        <figure class="visual">
+                            <img src="../assets/images/diensten-3.jpg" alt="" />
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section" id="motoriseren">
+            <div class="section--bar section--absolute"></div>
+            <div class="container">
+                <div class="flex">
+                    <div class="flex__item flex__item-7" data-aos="fade-left">
+                        <div class="section__text">
+                            <span class="caption">Diensten</span>
+                            <h1 class="title">
+                                Motoriseren
+                            </h1>
+                            <p class="text">
+                                Heb je hulp nodig bij het automatiseren van je raamdecoratie? Wij zorgen voor een professionele uitvoering bij het motoriseren van je woning.
+                            </p>
+                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                        </div>
+                    </div>
+                    <div class="flex__item flex__item-5" data-aos="fade-left">
+                        <figure class="visual">
+                            <img src="../assets/images/diensten-4.png" alt="" />
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="flex">
+                    <div class="flex__item flex__item-12">
+                        <div class="footer__wrapper flex--space-between">
+                            <div class="footer__left">
+                                <h3>Contact</h3>
+                                <p>
+                                    <a href="tel:0476 33 47 07">Bel 0476 33 47 07</a><br>
+                                    <a href="mailto:info@rdt-service.be">info@rdt-service.be</a><br>
+                                    Bergstraat 85, 8510 Marke
                                 </p>
-                                <a href="#" class="btn btn--secondary">Contacteer ons</a>
+                            </div>
+                            <div class="footer__right">
+                                <h3>Volg ons</h3>
+                                <a href="https://www.facebook.com/RDT-service-1903144473266154/" target="_blank">
+                                    Facebook
+                                </a>
                             </div>
                         </div>
-                        <div class="flex__item flex__item-4">
-                            <figure class="visual">
-                                <img src="../assets/images/diensten-3.jpg" alt="" />
-                            </figure>
+                        <div class="footer__meta flex--space-between">
+                            <div class="footer__left">
+                                <a href="index.html">RDT Service</a>
+                            </div>
+                            <div class="footer__right">
+                                <span>Site by <a href="https://www.vanhaegenberg.be/" target="_blank">vanhaegeneberg.be</a></span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="section">
-                <div class="container">
-                    <div class="flex">
-                        <div class="flex__item flex__item-7">
-                            <div class="section__text">
-                                <span class="caption">Diensten</span>
-                                <h1 class="title">
-                                    Motoriseren
-                                </h1>
-                                <p class="text">
-                                    Heb je hulp nodig bij het automatiseren van je raamdecoratie? Wij zorgen voor een professionele uitvoering bij het motoriseren van je woning.
-                                </p>
-                                <a href="#" class="btn btn--secondary">Contacteer ons</a>
-                            </div>
-                        </div>
-                        <div class="flex__item flex__item-5">
-                            <figure class="visual">
-                                <img src="../assets/images/diensten-4.png" alt="" />
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
