--- a/src/pages/diensten.html
+++ b/src/pages/diensten.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-        </section>e
+        </section>
         <section class="section" id="zonwering">
             <div class="section--bar section--absolute"></div>
             <div class="container">
