--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                                 RDT Service is gespecialiseerd in dienstverlening van mensen met vakkennis die direct inzetbaar zijn in je onderneming! 
                                 Zowel voor particulieren als in opdracht van winkels.
                             </p>
-                            <a href="#" class="btn btn--primary btn--link">Contacteer Ons</a>
+                            <a href="#contact" class="btn btn--primary btn--link">Contacteer Ons</a>
                         </div>
                     </div>
                     <div class="flex__item flex__item-4" data-aos="fade-left">
