Added fontawesome, swiper brand slider and resize buttons

--- a/src/pages/diensten.html
+++ b/src/pages/diensten.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RDT Service -  Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 </head>
 <body>
     <main class="main">
-        <header class="header row">
+        <header class="header">
             <div class="container container--flex">
                 <div class="header__brand">
-                    <a href="index.html"><span>RDT Service</span></a>
+                    <a href="index.html">RDT Service</a>
                 </div>
                 <nav class="header__menu">
                     <ul class="nav">
@@ -30,12 +31,12 @@
             <div class="container">
                 <div class="flex">
                     <div class="flex__item flex__item-8">
-                        <div class="section__text">
+                        <div class="section__content">
                             <span class="caption">Voor al je problemen</span>
                             <h1 class="title">
                                 <span class="title--colored">Totale afwerking</span> van A tot Z
                             </h1>
-                            <p class="text">
+                            <p class="paragraph">
                                 RDT Service biedt een professionele uitwerking voor het plaatsen of herstellen van raamdecoratie. Het installeren van zonwering of het aanbrengen van domotica in je woning. Heb je hulp nodig bij het motoriseren? Aarzel dan niet om ons in te schakelen.
                             </p>
                         </div>
@@ -54,15 +55,15 @@
             <div class="container">
                 <div class="flex flex--rev">
                     <div class="flex__item flex__item-8" data-aos="fade-right">
-                        <div class="section__text">
+                        <div class="section__content">
                             <span class="caption">Diensten</span>
                             <h1 class="title">
                                 Raamdecoratie
                             </h1>
-                            <p class="text">
+                            <p class="paragraph">
                                 Wij zijn gespecialiseerd in het plaatsen van unieke en functionele raamdecoratie. We zorgen voor een totale afwerking van je gekozen gordijnen, rolluiken of screens. Ook zorgen wij voor herstellingen van je bestaande raamdecoratie.
                             </p>
-                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                            <a href="index.html#contact" class="btn btn--secondary"><i class="fas fa-arrow-right btn-icon"></i> Contacteer ons</a>
                         </div>
                     </div>
                     <div class="flex__item flex__item-4" data-aos="fade-right">
@@ -78,15 +79,15 @@
             <div class="container">
                 <div class="flex">
                     <div class="flex__item flex__item-6" data-aos="fade-left">
-                        <div class="section__text">
+                        <div class="section__content">
                             <span class="caption">Diensten</span>
                             <h1 class="title">
                                 Binnen- & buiten zonwering
                             </h1>
-                            <p class="text">
+                            <p class="paragraph">
                                 RDT Service helpt je graag verder met het plaatsen van zonweringen voor zowel binnen als buiten gebruik. Wij zorgen voor de installatie van je terrasschermen, rolluiken of screens. Zowel manueel of geautomatiseerd.
                             </p>
-                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                            <a href="index.html#contact" class="btn btn--secondary"><i class="fas fa-arrow-right btn-icon"></i> Contacteer ons</a>
                         </div>
                     </div>
                     <div class="flex__item flex__item-6" data-aos="fade-left">
@@ -102,15 +103,15 @@
             <div class="container">
                 <div class="flex flex--rev">
                     <div class="flex__item flex__item-8" data-aos="fade-right">
-                        <div class="section__text">
+                        <div class="section__content">
                             <span class="caption">Diensten</span>
                             <h1 class="title">
                                 Domotica
                             </h1>
-                            <p class="text">
+                            <p class="paragraph">
                                 Wij regelen een vlekkeloze afwerking van je domoticasystemen. Met kant en klare domoticatoepassingen blijft je huisautomatisering betaalbaar en compatibel.   
                             </p>
-                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                            <a href="index.html#contact" class="btn btn--secondary"><i class="fas fa-arrow-right btn-icon"></i> Contacteer ons</a>
                         </div>
                     </div>
                     <div class="flex__item flex__item-4" data-aos="fade-right">
@@ -127,15 +128,15 @@
             <div class="container">
                 <div class="flex">
                     <div class="flex__item flex__item-7" data-aos="fade-left">
-                        <div class="section__text">
+                        <div class="section__content">
                             <span class="caption">Diensten</span>
                             <h1 class="title">
                                 Motoriseren
                             </h1>
-                            <p class="text">
+                            <p class="paragraph">
                                 Heb je hulp nodig bij het automatiseren van je raamdecoratie? Wij zorgen voor een professionele uitvoering bij het motoriseren van je woning.
                             </p>
-                            <a href="index.html#contact" class="btn btn--secondary">Contacteer ons</a>
+                            <a href="index.html#contact" class="btn btn--secondary"> <i class="fas fa-arrow-right btn-icon"></i>Contacteer ons</a>
                         </div>
                     </div>
                     <div class="flex__item flex__item-5" data-aos="fade-left">
