--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RDT Service -  Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 </head>
 <body>
     <main class="main">
-        <header class="header row">
+        <header class="header">
             <div class="container container--flex">
                 <div class="header__brand">
-                    <a href="index.html"><span>RDT Service</span></a>
+                    <a href="index.html">RDT Service</a>
                 </div>
                 <nav class="header__menu">
                     <ul class="nav">
@@ -30,17 +31,15 @@
             <div class="container">
                 <div class="flex">
                     <div class="flex__item flex__item-8 flex__item--centered">
-                        <div class="section__text">
+                        <div class="intro">
                             <span class="caption">De sterkste specialisten in hun vak</span>
-                            <h1 class="title">
-                                <span class="title--colored">Experts</span> in het installeren & motoriseren van raamdecoratie
-                            </h1>
-                            <p class="text">
+                            <h1 class="title"><span class="title--colored">Experts</span> in het installeren & motoriseren van raamdecoratie</h1>
+                            <p class="intro__content">
                                 Heb je specialisten nodig met ervaring in het plaatsen of motoriseren van raamdecoratie en zonweringen? 
                                 RDT Service is gespecialiseerd in dienstverlening van mensen met vakkennis die direct inzetbaar zijn in je onderneming! 
                                 Zowel voor particulieren als in opdracht van winkels.
                             </p>
-                            <a href="#contact" class="btn btn--primary btn--link">Contacteer Ons</a>
+                            <a href="#contact" class="btn btn--primary btn--link"><i class="fas fa-arrow-right btn-icon"></i> Contacteer Ons</a>
                         </div>
                     </div>
                     <div class="flex__item flex__item-4" data-aos="fade-left">
@@ -60,14 +59,34 @@
                             <h1 class="title">Zij vertrouwen in ons</h1>
 
                             <div class="references__brands">
-                                <img class="brand-logo" src="assets/images/logos/vdab.svg" alt="vdab">
-                                <!-- <img class="brand-logo" src="assets/images/logos/deloitte.svg" alt="deloitte">
-                                <img class="brand-logo" src="assets/images/logos/ibm.svg" alt="ibm">
-                                <img class="brand-logo" src="assets/images/logos/kbc.svg" alt="kbc"> -->
-                                <img class="brand-logo" src="assets/images/logos/ibis.svg" alt="ibis">
-                                <img class="brand-logo" src="assets/images/logos/vdab.svg" alt="vdab">
-                                <img class="brand-logo" src="assets/images/logos/ibis.svg" alt="ibis">
-                                <img class="brand-logo" src="assets/images/logos/vdab.svg" alt="vdab">
+                                <div class="swiper-container">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/vdab.svg" alt="vdab">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/ibis.svg" alt="ibis">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/deloitte.svg" alt="vdab">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/kbc.svg" alt="ibis" width="85px">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/ibm.svg" alt="vdab">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/ibis.svg" alt="ibis">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/vdab.svg" alt="vdab">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img class="brand-logo" src="assets/images/logos/ibis.svg" alt="ibis">
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -86,10 +105,10 @@
                                 </figure>
                             </div>
                             <div class="flex__item flex__item-6  flex__item--centered">
-                                <div class="section__text">
+                                <div class="section__content">
                                     <span class="caption">Wij verzekeren je van een professionele afwerking</span>
                                     <h1 class="title">Waarom kiezen voor <span class="title--colored">RDT Service</span></h1>
-                                    <p class="text">
+                                    <p class="paragraph">
                                         Wij stellen alleen de sterkste vakmannen te werk. Onze werknemers zijn flexibel, intelligent, efficiënt, leergierig en enthousiast. 
                                         Daarom investeren wij veel in het welzijn en de opleiding van onze werkkracht. Daarnaast is veiligheid en preventie uiterst belangrijk voor ons. 
                                         Onze werkkrachten zijn allemaal uitgerust met een VCA en een BA4 attest.
@@ -106,9 +125,9 @@
                                 </figure>
                             </div>
                             <div class="flex__item flex__item-6  flex__item--centered">
-                                <div class="section__text">
+                                <div class="section__content">
                                     <h1 class="title"><span class="title--colored">RDT Service</span> staat voor je klaar</h1>
-                                    <p class="text">
+                                    <p class="paragraph">
                                         Wij helpen je graag je verder met je mogelijke problemen en zorgen er persoonlijk voor dat die zo efficiënt mogelijk worden opgelost. 
                                         Wij kunnen je verzekeren dat volgende zaken van toepassing zijn:
                                     </p>
@@ -129,8 +148,8 @@
         
         <section class="section section--bar specialties">
             <div class="container">
-                <span class="caption"  data-aos="fade-up">Samen met jou zoeken we naar de beste oplossingen</span>
-                <h1 class="title"  data-aos="fade-up">Onze specialiteiten</h1> 
+                <span class="caption" data-aos="fade-up">Samen zoeken we naar de beste oplossing</span>
+                <h1 class="title" data-aos="fade-up">Onze specialiteiten</h1> 
                 
                 <div class="specialties__card-list">
                     <a href="diensten.html#raamdecoratie" class="card" data-aos="fade-up" data-aos-delay="50">
@@ -169,23 +188,23 @@
             </div>
         </section>
 
-        <section class="section" id="contact">
+        <section class="section section--huge" id="contact">
             <div class="container">
                 <div class="flex">
                     <div class="flex__item flex__item-6">
                         <h1 class="title">Contacteer ons</h1>
-                        <p class="text">
+                        <p class="paragraph">
                             Heb je vragen of wil je een afspraak maken? Laat ons iets weten en wij maken de nodige tijd voor je vrij om jou zo optimaal mogelijk te assisteren  <br><br>
                         </p>
-                        <p class="text">
+                        <p class="paragraph">
                             Bergstraat 85
                             <br>8510 Marke
                             <br><a href="mailto:info@rdt-service.be">info@rdt-service.be</a>    
                         </p>
-                        <p class="text">
+                        <p class="paragraph">
                             <a href="tel:0476 33 47 07">T: +32 (0) 476 33 47 07</a>
                         </p>
-                        <p class="text">
+                        <p class="paragraph">
                             BTW BE 0671 777 854
                         </p>
                     </div>
@@ -200,7 +219,7 @@
                             <div class="form__group">
                                 <textarea rows="10" placeholder="Bericht*" class="form__control"></textarea>                        
                             </div>
-                            <button type="submit" class="btn btn--primary">Versturen</button>
+                            <button type="submit" class="btn btn--primary"><i class="fas fa-arrow-right btn-icon"></i> Versturen</button>
                         </form>
                     </div>
                 </div>
@@ -232,12 +251,13 @@
                             <a href="index.html">RDT Service</a>
                         </div>
                         <div class="footer__right">
-                            <span>Site by <a href="https://www.vanhaegenberg.be/" target="_blank">vanhaegeneberg.be</a></span>
+                            <p>Site by <a href="https://www.vanhaegenberg.be/" target="_blank">vanhaegenberg.be</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+
 </body>
 </html>
