--- a/src/pages/diensten.html
+++ b/src/pages/diensten.html
@@ -6,6 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RDT Service -  Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '290542452288964');
+            fbq('track', 'PageView');
+        </script>
+        <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=290542452288964&ev=PageView&noscript=1"
+        /></noscript>
 </head>
 <body>
     <main class="main">
@@ -37,7 +52,7 @@
                                 <span class="title--colored">Totale afwerking</span> van A tot Z
                             </h1>
                             <p class="paragraph">
-                                RDT Service biedt een professionele uitwerking voor het plaatsen of herstellen van raamdecoratie. Het installeren van zonwering of het aanbrengen van domotica in je woning. Heb je hulp nodig bij het motoriseren? Aarzel dan niet om ons in te schakelen.
+                                RDT Service biedt een professionele uitwerking voor het plaatsen of herstellen van <a class="specialty-link" href="#raamdecoratie">raamdecoratie</a>. Het installeren van <a class="specialty-link" href="#zonwering">zonwering</a> of het aanbrengen van <a class="specialty-link" href="#domotica">domotica</a> in je woning. Heb je hulp nodig bij het <a class="specialty-link" href="#motoriseren">motoriseren</a>? Aarzel dan niet om ons in te schakelen.
                             </p>
                         </div>
                     </div>
@@ -173,7 +188,7 @@
                                 <a href="index.html">RDT Service</a>
                             </div>
                             <div class="footer__right">
-                                <span>Site by <a href="https://www.vanhaegenberg.be/" target="_blank">vanhaegeneberg.be</a></span>
+                                <span>Site by <a href="https://www.vanhaegenberg.be/" target="_blank">vanhaegenberg.be</a></span>
                             </div>
                         </div>
                     </div>
