--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RDT Service -  Home</title>
+    <meta name="description" content="RDT Service is gespecialiseerd in het plaatsen of motoriseren van raamdecoratie en zonweringen en het aanbieden van dienstverlening van mensen met vakkennis die direct inzetbaar zijn in je onderneming! Zowel voor particulieren als in opdracht van winkels.">
+    <meta name="robots" content="all,index,follow">
+    <meta http-equiv="cleartype" content="on">
+
+    <meta property="og:title" content="RDT Service -  Home">
+    <meta property="og:description" content="RDT Service is gespecialiseerd in het plaatsen of motoriseren van raamdecoratie en zonweringen en het aanbieden van dienstverlening van mensen met vakkennis die direct inzetbaar zijn in je onderneming! Zowel voor particulieren als in opdracht van winkels." >
+    <meta property="og:url" content="nl">
+    <!-- <meta property="og:image" content="../assets/images/share-image.jpg" > -->
+    <meta property="og:site_name" content="RDT Service">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="RDT Service -  Home">
+    <meta name="twitter:description" content="RDT Service is gespecialiseerd in het plaatsen of motoriseren van raamdecoratie en zonweringen en het aanbieden van dienstverlening van mensen met vakkennis die direct inzetbaar zijn in je onderneming! Zowel voor particulieren als in opdracht van winkels.">
+    <!-- <meta name="twitter:image" content="../../assets/images/share-image.jpg"> -->
+
+    <link rel="shortcut icon" href="./assets/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/images/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/images/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/images/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/images/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/images/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./assets/images/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/images/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/icons/favicon-16x16.png">
+
+    <!-- <link rel="manifest" href="../../assets/images/icons/manifest.json"> -->
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-config" content="../../assets/images/icons/browserconfig.xml"/>
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../../assets/images/icons/ms-icon-144x144.png">
+
+    <!-- {# <link rel="dns-prefetch" href="//fonts.googleapis.com"> #}
+    {# <link rel="dns-prefetch" href="//use.typekit.net"> #}
+    <link rel="dns-prefetch" href="//google-analytics.com">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="dns-prefetch" href="//www.google.com"> -->
+
+    <!-- {# google analytics #}
+    {# <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-xxxxxxxx-x', 'auto');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+    </script> #} -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <script>
         !function(f,b,e,v,n,t,s)
@@ -20,7 +75,8 @@
     </script>
     <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=290542452288964&ev=PageView&noscript=1"
-    /></noscript>       
+    /></noscript>   
+
 </head>
 <body>
     <main class="main">
@@ -238,7 +294,7 @@
                             <div class="form__group">
                                 <textarea rows="10" name="message" placeholder="Bericht*" class="form__control"></textarea>                        
                             </div>
-                            <button type="submit" name="submit" class="btn btn--primary"><i class="fas fa-arrow-right btn-icon"></i> Versturen</button>
+                            <button type="submit" name="submit" class="btn btn--primary" id="submitForm"><i class="fas fa-arrow-right btn-icon"></i> Versturen</button>
                         </form>
                     </div>
                 </div>
