Update: company address

--- a/src/index.html
+++ b/src/index.html
@@ -271,8 +271,9 @@
                             Heb je vragen of wil je een afspraak maken? Laat ons iets weten en wij maken de nodige tijd voor je vrij om jou zo optimaal mogelijk te assisteren  <br><br>
                         </p>
                         <p class="paragraph">
-                            Bergstraat 85
-                            <br>8510 Marke
+                            <a href="https://www.google.be/maps/place/Kortrijkstraat+498,+8560+Menen/@50.8000815,3.1413233,17.75z/data=!4m5!3m4!1s0x47c32e21c54ac605:0x9236fb2eafaf102e!8m2!3d50.8001125!4d3.1426464" target="_blank" rel="noopener">
+                            Kortrijkstraat 498
+                            <br>8930 Menen</a>
                             <br><a href="mailto:info@rdt-service.be">info@rdt-service.be</a>
                             <br><br><a href="tel:0476 33 47 07">T: +32 (0) 476 33 47 07</a>  
                             <br>BTW BE 0671 777 854                             
