Update: company adres in footer;

--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,7 @@
                             <p>
                                 <a href="tel:0476 33 47 07">Bel 0476 33 47 07</a><br>
                                 <a href="mailto:info@rdt-service.be">info@rdt-service.be</a><br>
-                                Bergstraat 85, 8510 Marke
+                                Kortrijkstraat 498 8930 Menen
                             </p>
                         </div>
                         <div class="footer__right">
